Create Project, Components and Model

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
-
+<app-header></app-header>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <app-recipes></app-recipes>
+            <app-shoppingList></app-shoppingList>
+        </div>
+    </div>
+</div>
 
 
