--- a/src/app/shoppingList/shoppingList.component.html
+++ b/src/app/shoppingList/shoppingList.component.html
@@ -2,6 +2,10 @@
     <div class="col-xs-10">
         <app-shoppingEdit></app-shoppingEdit>
         <hr>
-        <p>The list</p>
+        <ul class="list-group">
+            <a class="list-group-item" style="cursor: pointer" *ngFor="let ingredient of ingredients">
+                {{ ingredient.name}} ({{ ingredient.amount }})
+            </a>
+        </ul>
     </div>
 </div>
