--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,16 +1,19 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-h">
-            <a href="#" class="navbar-brand">Recipe Book</a>
+            <a href="#" class="navbar-brand aHeader">Recipe Book</a>
         </div>
         <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li><a href="#">Recepis</a></li>
-                <li><a href="#">Shopping List</a></li>
+            <ul class="nav navbar-nav header">
+                <li><a class="aHeader" href="#" (click)="onSelect('recipe')">Recipes</a></li>
+                <li><a class="aHeader"href="#" (click)="onSelect('shopping-list')">Shopping List</a></li>
             </ul>
+                <span>
+                    <img id="tenor" src="{{ header }}" alt="">
+                </span>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle aHeader" role="button">Manage <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Save Data</a></li>
                         <li><a href="#">Fetch Data</a></li>
