--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,7 +12,8 @@
                     <img id="tenor" src="{{ header }}" alt="">
                 </span>
             <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown">
+                <li class="dropdown"
+                appDropdown>
                     <a href="#" class="dropdown-toggle aHeader" role="button">Manage <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Save Data</a></li>
