--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,7 +1,6 @@
 <div class="row">
     <div class="col-md-5">
-        <app-recipeList
-        (recipeWasSelected)="selectedRecipe = $event"></app-recipeList>
+        <app-recipeList></app-recipeList>
     </div>
     <div class="col-md-7">
         <app-recipeDetail
