--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,8 +5,8 @@
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav header">
-                <li><a class="aHeader" href="#" (click)="onSelect('recipe')">Recipes</a></li>
-                <li><a class="aHeader"href="#" (click)="onSelect('shopping-list')">Shopping List</a></li>
+                <li routerLinkActive="active"><a class="aHeader" routerLink="/recipes">Recipes</a></li>
+                <li routerLinkActive="active"><a class="aHeader" routerLink="/shopping-list">Shopping List</a></li>
             </ul>
                 <span>
                     <img id="tenor" src="{{ header }}" alt="">
@@ -14,10 +14,10 @@
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown"
                 appDropdown>
-                    <a href="#" class="dropdown-toggle aHeader" role="button">Manage <span class="caret"></span></a>
+                    <a class="dropdown-toggle aHeader" role="button">Manage <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Save Data</a></li>
-                        <li><a href="#">Fetch Data</a></li>
+                        <li><a style="cursor: pointer">Save Data</a></li>
+                        <li><a style="cursor: pointer">Fetch Data</a></li>
                     </ul>
                 </li>
             </ul>
