--- a/src/app/recipes/recipeList/recipeItem/recipeItem.component.html
+++ b/src/app/recipes/recipeList/recipeItem/recipeItem.component.html
@@ -1,5 +1,5 @@
 <a 
-    style="cursor: pointer;"
+    style="cursor: pointer; margin-top: 10px;"
     [routerLink]="[index]"
     routerLinkActive="active"
     class="list-group-item clearfix">
