--- a/src/app/shoppingList/shoppingList.component.html
+++ b/src/app/shoppingList/shoppingList.component.html
@@ -3,7 +3,8 @@
         <app-shoppingEdit></app-shoppingEdit>
         <hr>
         <ul class="list-group">
-            <a class="list-group-item" style="cursor: pointer" *ngFor="let ingredient of ingredients">
+            <a class="list-group-item" style="cursor: pointer" *ngFor="let ingredient of ingredients; let i = index"
+            (click)="onEditItem(i)">
                 {{ ingredient.name}} ({{ ingredient.amount }})
             </a>
         </ul>
