--- a/src/app/recipes/recipeDetail/recipeDetail.component.html
+++ b/src/app/recipes/recipeDetail/recipeDetail.component.html
@@ -28,7 +28,7 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-12" style="margin-top: 5px; margin-bottom: 5px;">
         {{ recipe.description}}
     </div>
 </div>
