--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,6 +6,7 @@
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav header">
                 <li routerLinkActive="active"><a class="aHeader" routerLink="/recipes">Recipes</a></li>
+                <li routerLinkActive="active"><a class="aHeader" routerLink="/auth">Authenticate</a></li>
                 <li routerLinkActive="active"><a class="aHeader" routerLink="/shopping-list">Shopping List</a></li>
             </ul>
                 <span>
