Authentication and Route Protect Final

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,16 +5,18 @@
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav header">
-                <li routerLinkActive="active"><a class="aHeader" routerLink="/recipes">Recipes</a></li>
-                <li routerLinkActive="active"><a class="aHeader" routerLink="/auth">Authenticate</a></li>
+                <li routerLinkActive="active" *ngIf="isAuthenticated"><a class="aHeader" routerLink="/recipes">Recipes</a></li>
+                <li routerLinkActive="active" *ngIf="!isAuthenticated"><a class="aHeader" routerLink="/auth">Authenticate</a></li>
                 <li routerLinkActive="active"><a class="aHeader" routerLink="/shopping-list">Shopping List</a></li>
             </ul>
                 <span>
                     <img id="tenor" src="{{ header }}" alt="">
                 </span>
             <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown"
-                appDropdown>
+                <li *ngIf="isAuthenticated">
+                    <a style="cursor: pointer" class="aHeader" (click)="onLogOut()">Logout</a>
+                </li>
+                <li class="dropdown" appDropdown *ngIf="isAuthenticated">
                     <a class="dropdown-toggle aHeader" role="button">Manage <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a style="cursor: pointer" (click)="onSaveData()">Save Data</a></li>
