--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,15 +1,23 @@
+<ng-template appPlaceholder></ng-template>
 <div class="row">
     <div class="col-xs-12 col-md-6 col-md-offset-3">
-        <div class="alert alert-danger" *ngIf="error">
+       <!--  <div class="alert alert-danger" *ngIf="error">
             <p> {{ error }} </p>
-        </div>
-        <div class="alert alert-success" *ngIf="sucessSignBol">
+        </div> -->
+        
+        
+        <!-- <app-alert [message]="error" *ngIf="error" (close)="onHandleError()"></app-alert> -->
+        
+        
+        <!-- TODO -->
+        
+        <!-- <div class="alert alert-success" *ngIf="sucessSignBol">
             <p> {{ sucessSign }} </p>
         </div>
         <div class="alert alert-success" *ngIf="sucessLoginBol">
             <p> {{ sucessLogin }} </p>
-        </div>
-      <!--  miss sucess login    -->
+        </div> -->
+
         <div *ngIf="isLoading" style="text-align: center;">
             <app-loading-spinner></app-loading-spinner>
         </div>
